- fix backend to list method